// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CxCollapse customize 1`] = `
<div>
  <div
    class="bazinga collapse"
  >
    Test
  </div>
</div>
`;

exports[`loads and displays CxCollapse component 1`] = `
<div>
  <div
    class="collapse"
  >
    Test
  </div>
</div>
`;
